force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/MPM4_BASE__Milestone1_Time__c.object-meta.xml
<CustomObject>
    <description>Passage Technology - Milestones PM+ Free Edition - A time entry record which allows users to log times against milestone tasks.</description>
    <label>Time</label>
    <nameField>
        <displayFormat>PT{0000}</displayFormat>
        <label>Project Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>