force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/fields/MPM4_BASE__ImportID__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ImportID__c</fullName>
    <label>ImportID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>