force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/fields/MPM4_BASE__Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Incurred_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user who incurred the time being charged. Defaults to current user if left blank.</inlineHelpText>
    <label>zDeprecated</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Times_Incurred</relationshipName>
    <type>Lookup</type>
</CustomField>