force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/fields/MPM4_BASE__Incurred_By_Resource__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Incurred_By_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incurred By</label>
    <referenceTo>MPM4_BASE__Milestone1_Resource__c</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Times</relationshipName>
    <type>Lookup</type>
</CustomField>