force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/fields/MPM4_BASE__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Task__c</fullName>
    <inlineHelpText>The task that is having time charged to it.</inlineHelpText>
    <label>Project Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <valueField>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Resource__r.MPM4_BASE__User__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipLabel>Times</relationshipLabel>
    <relationshipName>Project_Times</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>