force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The resource that incurred this time</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Logged Time</relationshipLabel>
    <relationshipName>Time</relationshipName>
    <type>Lookup</type>
</CustomField>