force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/validationRules/MPM4_BASE__Hours_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Hours_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>MPM4_BASE__Hours__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Hours__c</errorDisplayField>
    <errorMessage>The hours entered cannot be negative.</errorMessage>
</ValidationRule>