force-app/main/default/objects/MPM4_BASE__Milestone1_Time__c/validationRules/MPM4_BASE__Validation_Time_Hours_Less_Than_24_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Validation_Time_Hours_Less_Than_24_Hours</fullName>
    <active>true</active>
    <description>The time entered cannot be greater than one full day (24 hours).</description>
    <errorConditionFormula>MPM4_BASE__Hours__c  &gt; 24</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Hours__c</errorDisplayField>
    <errorMessage>The hours cannot exceed 24.</errorMessage>
</ValidationRule>